feat(board): setup board entity
