# internal/board/repository/models.go
@@ -1,0 +1,29 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.30.0
+
+package repository
+
+import (
+	"github.com/jackc/pgx/v5/pgtype"
+)
+
+type Board struct {
+	ID        pgtype.UUID        `db:"id" json:"id"`
+	SprintID  pgtype.UUID        `db:"sprint_id" json:"sprint_id"`
+	Name      string             `db:"name" json:"name"`
+	Position  int32              `db:"position" json:"position"`
+	CreatedAt pgtype.Timestamptz `db:"created_at" json:"created_at"`
+	UpdatedAt pgtype.Timestamptz `db:"updated_at" json:"updated_at"`
+	DeletedAt pgtype.Timestamptz `db:"deleted_at" json:"deleted_at"`
+}
+
+type BoardColumn struct {
+	ID        pgtype.UUID        `db:"id" json:"id"`
+	BoardID   pgtype.UUID        `db:"board_id" json:"board_id"`
+	Name      string             `db:"name" json:"name"`
+	Position  int32              `db:"position" json:"position"`
+	CreatedAt pgtype.Timestamptz `db:"created_at" json:"created_at"`
+	UpdatedAt pgtype.Timestamptz `db:"updated_at" json:"updated_at"`
+	DeletedAt pgtype.Timestamptz `db:"deleted_at" json:"deleted_at"`
+}
